--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
 </head>
-<body>
+<body class="website">
+    <button class="button-19" onclick="generateNewGrid()">new grid</button>
     <div id="grid-container"></div>
 </body>
 </html>
